# Luks_storage

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  SETUP.md  cleanup.sh  cookies.txt  health-check.sh  init.sh  luks_manager.db-shm  luks_manager.db-wal  monitor-app.sh  start.sh  test_permissions.sh  viewer_cookies.txt
.sqlx/: query-fbb0d6bde67b2d9c8d6c8fcdbb365063f44fe5c70fde41a18274a39bf6c9fe3f.json
migrations/: 20250703110857_create_users_table.sql  20250708105500_add_login_attempts.sql  20250719171412_create_audit_logs.sql  20250719213000_add_last_login_to_users.sql  20250720010000_permissions_unique_constraint.sql  20250722164225_create_cameras_table.sql
migrations/1/: up.sql
migrations/2/: down.sql  up.sql
migrations/20250719191733_create_permissions_and_share_links/: down.sql  up.sql
src/: cctv_manager.rs  main.rs  main.rs.backup  main.rs.backup2  main.rs.backup_bulk  main.rs.before_audit  main.rs.clean
static/css/: custom.css
templates/: admin_camera_settings.html  admin_permissions.html  admin_server_health.html  admin_user_edit.html  admin_user_edit.html.backup  admin_user_form.html  admin_users.html  admin_users.html.before_bulk  admin_users.html.broken  base.html  base.html.backup  cctv_dashboard.html  index.html  index.html.backup  index.html.current  login.html.backup
