[package]
name = "luks_web_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
rand = "0.8"
mime_guess = "2.0"

# Dependencies for database and password management
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
argon2 = "0.5"
thiserror = "1.0"
actix-files = "0.6"
actix-multipart = "0.6"
sysinfo = "0.36.1"
chrono = "0.4.41"
